# wakaru

./: .eslintignore  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RS.md  SKILL.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  rust-toolchain.toml  taze.config.js  turbo.json  vercel.json  vitest.config.js  vitest.config.ts  wb.format.js  wb.js
crates/cli/: Cargo.toml
crates/cli/src/: color.rs  discovery.rs  formatter.rs  json_output.rs  main.rs  main_tests.rs  output.rs
crates/core/: Cargo.toml
crates/core/src/: driver.rs  facts.rs  js_names.rs  lib.rs  module_path.rs  namespace_decomposition.rs  reexport_consolidation.rs  sourcemap_rename.rs  tdz_check.rs  vue_recovery.rs  vue_template.rs
crates/core/src/analysis/: binding_uses.rs  mod.rs
crates/core/src/driver/: diagnostics.rs  discovery.rs  error.rs  io.rs  normalize.rs  output.rs  single_file.rs  trace.rs  types.rs  unpack.rs  unpack_cleanup.rs  unpack_cycles.rs
crates/core/src/rules/: arg_rest.rs  arrow_function.rs  arrow_return.rs  babel_helper_utils.rs  binding_facts.rs  builtin_aliases.rs  class_expression_to_declaration.rs  cross_module_helper_refs.rs  dead_decls.rs  dead_imports.rs  (+78 more)
crates/core/tests/: amd_unpack.rs  arg_rest_rule.rs  arrow_function_rule.rs  arrow_return_rule.rs  bun_unpack.rs  bundle_unpack.rs  class_expression_to_declaration_rule.rs  closure_module_manager_unpack.rs  cocos_creator_unpack.rs  dead_decls_rule.rs  dead_imports_rule.rs  dead_module_elimination.rs  decompile_options_rule.rs  delta_dce_rule.rs  esbuild_fixtures.rs  esbuild_unpack.rs  exponent_rule.rs  extract_inlined_function_rule.rs  facts_rule.rs  filename_recovery.rs  flip_comparisons_rule.rs  import_dedup_rule.rs  jsx_text_cleanup_rule.rs  merge_declaration_init_rule.rs  metro_unpack.rs  multi_file_unpack.rs  namespace_decomposition_rule.rs  noop_pipeline.rs  obj_method_shorthand_rule.rs  obj_shorthand_rule.rs  object_assign_spread_rule.rs  pipeline_helpers_rule.rs  pipeline_ts_async_helpers_rule.rs  remove_void_rule.rs  rollup_unpack.rs  simplify_sequence_rule.rs  smart_inline_rule.rs  smart_rename_rule.rs  systemjs_unpack.rs  un_argument_spread_rule.rs  (+67 more)
crates/formatter/: Cargo.toml
crates/formatter/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
wakaru-rs/: CLAUDE.md  Cargo.toml  EXTENSIONS.md  README.md
wakaru-rs/docs/: architecture.md  debugging.md  fact-system.md  helper-detection.md  rule-dependency-inventory.md
wakaru-rs/docs/proposals/: skip-unless.md
wakaru-rs/npm/: package.json
wakaru-rs/src/: driver.rs  facts.rs  lib.rs  main.rs  namespace_decomposition.rs  reexport_consolidation.rs  sourcemap_rename.rs
wakaru-rs/src/rules/: arg_rest.rs  arrow_function.rs  arrow_return.rs  babel_helper_utils.rs  dead_decls.rs  dead_imports.rs  exponent.rs  flip_comparisons.rs  import_dedup.rs  mod.rs  obj_method_shorthand.rs  obj_shorthand.rs  rename_utils.rs  simplify_sequence.rs  smart_inline.rs  smart_rename.rs  un_argument_spread.rs  un_array_concat_spread.rs  un_assert_this_initialized.rs  un_assignment_merging.rs  un_async_await.rs  un_bracket_notation.rs  un_builtin_prototype.rs  un_class_call_check.rs  un_class_fields.rs  un_conditionals.rs  un_curly_braces.rs  un_define_property.rs  un_destructuring.rs  un_double_negation.rs  un_enum.rs  un_es6_class.rs  un_esm.rs  un_esmodule_flag.rs  un_export_rename.rs  un_for_of.rs  un_iife.rs  un_import_rename.rs  un_indirect_call.rs  un_infinity.rs  (+28 more)
wakaru-rs/src/unpacker/: browserify.rs  esbuild.rs  mod.rs  scope_hoist.rs  webpack4.rs  webpack5.rs
wakaru-rs/tests/: arg_rest_rule.rs  arrow_function_rule.rs  arrow_return_rule.rs  bundle_unpack.rs  dead_decls_rule.rs  dead_imports_rule.rs  decompile_options_rule.rs  esbuild_fixtures.rs  esbuild_unpack.rs  exponent_rule.rs  facts_rule.rs  flip_comparisons_rule.rs  namespace_decomposition_rule.rs  noop_pipeline.rs  obj_method_shorthand_rule.rs  obj_shorthand_rule.rs  object_assign_spread_rule.rs  pipeline_helpers_rule.rs  remove_void_rule.rs  simplify_sequence_rule.rs  smart_inline_rule.rs  smart_rename_rule.rs  un_argument_spread_rule.rs  un_array_concat_spread_rule.rs  un_assignment_merging_rule.rs  un_async_await_rule.rs  un_bracket_notation_rule.rs  un_builtin_prototype_rule.rs  un_class_call_check_rule.rs  un_class_fields_rule.rs  un_conditionals_rule.rs  un_curly_braces_rule.rs  un_define_property_rule.rs  un_destructuring_rule.rs  un_double_negation_rule.rs  un_enum_rule.rs  un_es6_class_rule.rs  un_esm_rule.rs  un_esmodule_flag_rule.rs  un_export_rename_alias_rule.rs  (+43 more)
wakaru-rs/tests/common/: mod.rs
wakaru-rs/tests/snapshots/: webpack4_unpack__entry-51.snap  webpack4_unpack__entry.snap  webpack4_unpack__module-0.snap  webpack4_unpack__module-10.snap  webpack4_unpack__module-11.snap  webpack4_unpack__module-12.snap  webpack4_unpack__module-13.snap  webpack4_unpack__module-14.snap  webpack4_unpack__module-15.snap  webpack4_unpack__module-16.snap  webpack4_unpack__module-17.snap  webpack4_unpack__module-18.snap  webpack4_unpack__module-19.snap  webpack4_unpack__module-2.snap  webpack4_unpack__module-21.snap  webpack4_unpack__module-22.snap  webpack4_unpack__module-23.snap  webpack4_unpack__module-24.snap  webpack4_unpack__module-25.snap  webpack4_unpack__module-27.snap  webpack4_unpack__module-28.snap  webpack4_unpack__module-29.snap  webpack4_unpack__module-3.snap  webpack4_unpack__module-30.snap  webpack4_unpack__module-31.snap  webpack4_unpack__module-32.snap  webpack4_unpack__module-33.snap  webpack4_unpack__module-34.snap  webpack4_unpack__module-35.snap  webpack4_unpack__module-36.snap  webpack4_unpack__module-37.snap  webpack4_unpack__module-38.snap  webpack4_unpack__module-39.snap  webpack4_unpack__module-4.snap  webpack4_unpack__module-40.snap  webpack4_unpack__module-41.snap  webpack4_unpack__module-42.snap  webpack4_unpack__module-43.snap  webpack4_unpack__module-44.snap  webpack4_unpack__module-45.snap  (+45 more)
wakaru-rs/unpacked/: entry.js
(+791 files in other folders)
