[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.6.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
wakaru-core = { path = "crates/core" }
wakaru-formatter = { path = "crates/formatter" }
anyhow = "1.0"
sourcemap = "9"
swc_core = { version = "=70.0.0", features = [
  "common",
  "ecma_ast",
  "ecma_codegen",
  "ecma_parser",
  "ecma_parser_typescript",
  "ecma_transforms",
  "ecma_utils",
  "ecma_visit",
] }
tracing = "0.1"

# Dev/test iteration profile. Full DWARF is the dominant link cost across the
# 90+ swc_core-linked test binaries; line-tables keep panic backtraces with
# file:line while cutting debuginfo generation and link size. unpacked split
# debuginfo stops the linker copying debug info into each binary.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev-release]
inherits = "release"
lto = "thin"
codegen-units = 16
