[package]
name = "wakaru-rs"
version = "0.2.0-next.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust rewrite of Wakaru unminify pipeline"

[lib]
name = "wakaru_rs"
path = "src/lib.rs"

[[bin]]
name = "wakaru"
path = "src/main.rs"

[dev-dependencies]
insta = "1"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
similar = "2"
sourcemap = "9"
swc_core = { version = "56", features = [
  "common",
  "ecma_ast",
  "ecma_codegen",
  "ecma_parser",
  "ecma_parser_typescript",
  "ecma_transforms",
  "ecma_utils",
  "ecma_visit",
] }
