[package]
name = "wakaru-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wakaru CLI — fast JavaScript decompiler and bundle splitter"

[[bin]]
name = "wakaru"
path = "src/main.rs"

[dependencies]
wakaru.workspace = true
wakaru-core.workspace = true
wakaru-formatter.workspace = true
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sourcemap.workspace = true
tracing.workspace = true
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", features = ["registry"] }
