[package]
name = "wakaru-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wakaru WASM bindings for browser-based JavaScript decompilation"

[lib]
crate-type = ["cdylib"]

[dependencies]
wakaru-core.workspace = true
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
